--- a/integracionwp/Base.lproj/LaunchScreen.storyboard
+++ b/integracionwp/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,24 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DreamteamCO" translatesAutoresizingMaskIntoConstraints="NO" id="ke9-t8-yYV">
+                                <rect key="frame" x="190" y="190" width="220" height="220"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="3qv-9I-AXj"/>
+                                    <constraint firstAttribute="width" constant="220" id="rzh-u2-CwU"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="ke9-t8-yYV" secondAttribute="bottom" constant="190" id="MZg-we-F2J"/>
+                            <constraint firstItem="ke9-t8-yYV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="StQ-us-rrj"/>
+                            <constraint firstItem="ke9-t8-yYV" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="170" id="Tt3-vD-Db3"/>
+                            <constraint firstAttribute="trailing" secondItem="ke9-t8-yYV" secondAttribute="trailing" constant="190" id="YAC-FR-ph4"/>
+                            <constraint firstItem="ke9-t8-yYV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="epy-Bo-2ij"/>
+                            <constraint firstItem="ke9-t8-yYV" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="190" id="unw-Q1-kgO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +41,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="DreamteamCO" width="1024" height="1024"/>
+    </resources>
 </document>
